--- a/server/.github/workflows/node.yml
+++ b/server/.github/workflows/node.yml
@@ -4,7 +4,7 @@
 name: Deploy to EC2 Node.js CI/CD
 on:
   push:
-    branches: [ "etaiiler_prod_1" ]
+    branches: [ "main" ]
   
 
 jobs:
@@ -27,4 +27,22 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run start
+
+    # Step 2
+    - name: Set AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+
+      # Step 3
+    - name: Create CodeDeploy Deployment
+      id: deploy
+      run: |
+        aws deploy create-deployment \
+        --application-name etaiiler-nodeserver-app-cd1 \
+        --deployment-group-name etaiiler-nodeserver-app-dg1 \
+        --deployment-config-name CodeDeployDefault.OneAtATime \
+        --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
     
