--- a/server/appspec.yml
+++ b/server/appspec.yml
@@ -2,15 +2,16 @@ version: 0.0
 os: ubuntu
 files:
   - source: /
-    destination: /var/www/html/nodeserver/etaiiler_nodejs/server
+    destination: /var/www/html/nodeserver/etaiiler_nodejs
 hooks:
 # ApplicationStop:
 # DownloadBundle:
-#  BeforeInstall:
-#    - location: scripts/before_install.sh
-#      timeout: 300
-#      runas: root
+
 # Install:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
