--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /var/www/html/nodeserver/etaiiler_nodejs/server
+    destination: /var/www/html
 hooks:
 # ApplicationStop:
 # DownloadBundle:
