--- a/server/.env
+++ b/server/.env
@@ -3,8 +3,8 @@ APP_PORT = 5000
 
 API_VERSION = v1
 
-AWS_ACCESS_KEY_ID = "AKIATPAILJSQ3KSDD3P4"
-AWS_SECRET_ACCESS_KEY = "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"
+AWS_ACCESS_KEY_ID = "AKIATYECUQQMASHG6ZAW"
+AWS_SECRET_ACCESS_KEY = "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"
 
 RAZORPAY_KEY_ID = "rzp_test_Fxjkta891p06jg"
 RAZORPAY_KEY_SECRET = "uz8VwOSG8BpmKJNirgAjS4qW"
